--- a/demo/common.html
+++ b/demo/common.html
@@ -10,7 +10,11 @@
 <!-- Menu Items -->
 <script>
   window.demos = [
-     {name: 'index', title: 'Basic Examples'}
+     {name: 'index', title: 'Basic Examples'},
+     {name: 'labels-default', title: 'Labels'},
+     {name: 'labels-valo', title: 'Valo'},
+     {name: 'labels-md', title: 'MD'},
+     {name: 'labels-md-placeholder', title: 'MD::placeholder'}
   ];
 </script>
 <link rel="import" href="../../elements-demo-resources/demo-navigation.html">
