Label always attached if floating=true. Adding more examples

--- a/demo/common.html
+++ b/demo/common.html
@@ -13,8 +13,11 @@
      {name: 'index', title: 'Basic Examples'},
      {name: 'labels-default', title: 'Labels'},
      {name: 'labels-valo', title: 'Valo'},
-     {name: 'labels-md', title: 'MD'},
-     {name: 'labels-md-placeholder', title: 'MD::placeholder'}
+     {name: 'labels-md', title: 'MD-1'},
+     {name: 'labels-md-placeholder', title: 'MD-2'},
+     {name: 'labels-md-label', title: 'MD-3'},
+     {name: 'labels-custom-bottom', title: 'custom-1'},
+     {name: 'labels-custom-right', title: 'custom-2'}
   ];
 </script>
 <link rel="import" href="../../elements-demo-resources/demo-navigation.html">
