--- a/demo/labels-md.html
+++ b/demo/labels-md.html
@@ -52,6 +52,10 @@
               padding: 2px 0;
               color: lightskyblue;
             };
+
+            --vaadin-input-label-placeholder-shown: {
+              display: none;
+            }            
           }
           </style>
         </custom-style>
