--- a/demo/labels-md-label.html
+++ b/demo/labels-md-label.html
@@ -47,24 +47,22 @@
             }
 
             --vaadin-input-label: {
+              transition: all 0.3s ease-in-out;
               position: absolute;
               font-size: 10px;
               padding: 2px 0;
               color: lightskyblue;
-            };
-
-            --vaadin-input-placeholder: {
-              transition: all 0.3s ease-in-out;
-            };
-
-            --vaadin-input-placeholder-focus: {
-              color: lightskyblue;
-              font-size: 10px;
-              transform: translateY(-20px);
+              transform: translateY(0px);
+              z-index: auto;
+              opacity: 1;
             };
 
             --vaadin-input-label-placeholder-shown: {
-              display: none;
+              font-size: 12px;
+              color: grey;
+              z-index: -1;
+              opacity: 0;
+              transform: translateY(+20px);
             }
           }
 
