Remove `floating` property. Just using label.

--- a/demo/labels-custom-bottom.html
+++ b/demo/labels-custom-bottom.html
@@ -74,7 +74,7 @@
           </style>
         </custom-style>
 
-        <vaadin-input id="custom-bottom" floating label="Type your Name"></vaadin-input>
+        <vaadin-input id="custom-bottom" label="First Name" placeholder="First Name"></vaadin-input>
       </template>
     </demo-snippet>
 
