--- a/demo/labels-custom-right.html
+++ b/demo/labels-custom-right.html
@@ -77,7 +77,7 @@
           </style>
         </custom-style>
 
-        <vaadin-input id="custom-right" floating label="Type your Name"></vaadin-input>
+        <vaadin-input id="custom-right" label="First Name" placeholder="First Name"></vaadin-input>
       </template>
     </demo-snippet>
 
