--- a/demo/labels-valo.html
+++ b/demo/labels-valo.html
@@ -49,7 +49,7 @@
           </style>
         </custom-style>
 
-        <vaadin-input id="valo" label="First Name" placeholder="Type your Name"></vaadin-input>
+        <vaadin-input id="valo" label="First Name" placeholder="First Name"></vaadin-input>
       </template>
     </demo-snippet>
 
