--- a/demo/labels-md-label.html
+++ b/demo/labels-md-label.html
@@ -69,7 +69,7 @@
           </style>
         </custom-style>
 
-        <vaadin-input id="md" floating label="Type your Name"></vaadin-input>
+        <vaadin-input id="md" label="First Name" placeholder="First Name"></vaadin-input>
       </template>
     </demo-snippet>
 
