--- a/demo/labels-md.html
+++ b/demo/labels-md.html
@@ -55,12 +55,12 @@
 
             --vaadin-input-label-placeholder-shown: {
               display: none;
-            }            
+            }
           }
           </style>
         </custom-style>
 
-        <vaadin-input id="md" floating label="First Name" placeholder="Type your Name"></vaadin-input>
+        <vaadin-input id="md" label="First Name" placeholder="First Name"></vaadin-input>
       </template>
     </demo-snippet>
 
