Do not mark input invalid until the first time the user interacts with it

--- a/vaadin-input.html
+++ b/vaadin-input.html
@@ -224,7 +224,6 @@ Custom property | Description | Default
 
       ready() {
         super.ready();
-        this.invalid = this._isInvalid();
 
         // Make FF take the focus (#9)
         if (this.autofocus) {
@@ -236,6 +235,9 @@ Custom property | Description | Default
       }
 
       focus() {
+        // We dont want to mark the input invalid until the first time the user focus
+        this.invalid = this._isInvalid();
+
         this._setFocused(true);
         this.$.input.focus();
       }
