--- a/vaadin-control-state-mixin.html
+++ b/vaadin-control-state-mixin.html
@@ -1,5 +1,7 @@
 <script>
-  // IronFormElementBehavior is not a proper 2.0 class.
+
+  // IronFormElementBehavior is not a proper 2.0 class, and its tabindex
+  // implementation fails in the shadow dom.
   window.VaadinControlStateMixin = subclass => class extends subclass {
     static get config() {
       return {
@@ -21,24 +23,19 @@
            */
           disabled: {
             type: Boolean,
-            value: false,
-            notify: true,
             observer: '_disabledChanged',
             reflectToAttribute: true
           },
 
           /**
-           * The position of the element in the tabbing navigation order for the current document.
+           * Internal property needed to listen to `tabindex` attribute changes.
+           *
+           * For changing the tabindex of this component use the native `tabIndex` propety.
+           * @private
            */
           tabindex: {
             type: Number,
-            reflectToAttribute: true,
-            observer: '_tabindexChanged',
-            value: 0
-          },
-
-          _oldTabIndex: {
-            type: Number
+            observer: '_tabindexChanged'
           }
         }
       };
@@ -46,63 +43,78 @@
 
     ready() {
       super.ready();
-      this.addEventListener('focus', this.focus.bind(this), true);
-      this.addEventListener('blur', this._blurHandler.bind(this), true);
-      this.addEventListener('keydown', this._keydownHandler.bind(this), true);
-    }
 
-    _disabledChanged(disabled, old) {
-      this.setAttribute('aria-disabled', disabled ? 'true' : 'false');
-      this.style.pointerEvents = disabled ? 'none' : '';
-      if (disabled) {
-        this._oldTabIndex = this.tabIndex;
-        this._setFocused(false);
-        this.tabIndex = -1;
-        this.blur();
-      } else if (this._oldTabIndex !== undefined) {
-        this.tabIndex = this._oldTabIndex;
+      // Make FF take the focus (#9)
+      if (this.autofocus) {
+        this.focus();
       }
+
+      this.addEventListener('focus', this._focus.bind(this));
+      this.addEventListener('blur', this._blur.bind(this));
+
+      Polymer.RenderStatus.afterNextRender(this, () => {
+        this._getFocusElement().addEventListener('focus', this._onElemFocus.bind(this));
+        this._getFocusElement().addEventListener('blur', this._onElemBlur.bind(this));
+        this._getFocusElement().addEventListener('keydown', this._onElemKeydown.bind(this));
+      });
     }
 
-    focus() {
-      if (!this._shiftTabPressed) {
-        this._setFocused(true);
-        // Forward focus to internal input
-        if (this.$.input) {
-          this.$.input.focus();
-        }
-      }
+    _getFocusElement() {
+      window.console.warn(`Please implement _getFocusElement() in <${this.localName}>`);
+      return this;
     }
 
-    /**
-     * Handler that is called when a shift+tab keypress is detected.
-     */
-    _keydownHandler(event) {
-      if (event.shiftKey && event.keyCode == 9) {
-        var oldTabIndex = this.getAttribute('tabindex');
-        this._shiftTabPressed = true;
-        this.setAttribute('tabindex', '-1');
-        setTimeout(function() {
-          this.setAttribute('tabindex', oldTabIndex);
-          this._shiftTabPressed = false;
-        }.bind(this), 1);
-      }
+    _onElemFocus() {
+      this._setFocused(true);
     }
 
-    /**
-     *
-     */
-    _blurHandler(event) {
+    _focus() {
+      this._getFocusElement().focus();
+    }
+
+    _onElemBlur() {
       this._setFocused(false);
+      this.invalid = this._isInvalid();
     }
 
-    /**
-     * Synchronizes tabindex with input element
-     */
-    _tabindexChanged(tabindex) {
-      if (this.$.input) {
-        this.$.input.setAttribute('tabindex', tabindex);
+    _blur() {
+      this._getFocusElement().blur();
+    }
+
+    _onElemKeydown(e) {
+      // on shift-tab
+      if (e.shiftKey && e.keyCode === 9) {
+        this.focus();
       }
+    }
+
+    _disabledChanged(disabled) {
+      if (disabled) {
+        this._oldTabindex = this.tabindex;
+        this.removeAttribute('tabindex');
+      } else if (this._oldTabindex !== undefined) {
+        this.tabIndex = this._oldTabindex;
+        this._oldTabindex = undefined;
+      }
+    }
+
+    _tabindexChanged(tabindex) {
+      if (this.disabled && tabindex > 0) {
+        this._oldTabindex = tabindex;
+      }
+      if (window.ShadyDOM && !this._tabindexChanging) {
+        // In shady remove host attribute and set to internal input
+        this._tabindexChanging = true;
+        this.removeAttribute('tabindex');
+        this._getFocusElement().tabIndex = tabindex;
+        this._tabindexChanging = undefined;
+      }
+    }
+
+    _focusedChanged() {
+      // Needed for Edge, until they have support for CSS Custom Properties
+      // (already shipping in Edge Preview)
+      this.updateStyles();
     }
   };
 </script>
