--- a/test/control-state.html
+++ b/test/control-state.html
@@ -33,11 +33,44 @@
         customElement = fixture('default');
 
         // Need the shadow dom be rendered before getting the internal element reference
-        runAsync(() => focusElement = customElement._getFocusElement(), done);
+        runAsync(() => focusElement = customElement.getFocusElement(), done);
       });
 
       describe('tabindex', function() {
-        if (!window.ShadyDOM) {
+        if (window.ShadyDOM) {
+
+          it('in shady dom we dont need any tabindex set by default', function() {
+            expect(customElement.getAttribute('tabindex')).not.to.be.ok;
+          });
+
+          it('in shady dom setting tabIndex should always remove the attribute', function(done) {
+            customElement.tabIndex = 1;
+            runAsync(() => expect(customElement.getAttribute('tabindex')).not.to.be.ok, done);
+          });
+
+          it('in shady dom setting tabIndex should forward it to the internal element', function(done) {
+            customElement.tabIndex = 1;
+            runAsync(() => expect(focusElement.getAttribute('tabindex')).to.be.equal('1'), done);
+          });
+
+          it('in shady dom enabling the element should not add the tabindex attribute', function(done) {
+            customElement.disabled = true;
+            customElement.tabIndex = 1;
+            customElement.disabled = false;
+            runAsync(() => expect(customElement.getAttribute('tabindex')).not.to.be.ok, done);
+          });
+
+          it('in shady dom tabindex should be set to the internal element', function(done) {
+            customElement.tabIndex = 1;
+            runAsync(() => expect(focusElement.getAttribute('tabindex')).to.be.equal('1'), done);
+          });
+
+        } else {
+
+          it('in shady dom we always need a tabindex by default', function() {
+            expect(customElement.getAttribute('tabindex')).to.be.equal('0');
+          });
+
           it('in shadow dom setting tabIndex should update the attribute', function() {
             customElement.tabIndex = 1;
             expect(customElement.getAttribute('tabindex')).to.be.equal('1');
@@ -49,6 +82,7 @@
             customElement.disabled = false;
             expect(customElement.getAttribute('tabindex')).to.be.equal('1');
           });
+
         }
 
         it('setting disabled to true should remove tabindex', function() {
@@ -62,54 +96,30 @@
           customElement.disabled = true;
           customElement.tabIndex = 4;
           // FF updates to attributes happen asynchronously
-          runAsync(() =>expect(focusElement.getAttribute('tabindex')).to.be.equal('4'), done);
+          runAsync(() => expect(focusElement.getAttribute('tabindex')).to.be.equal('4'), done);
         });
 
-        if (window.ShadyDOM) {
-          it('in shady dom setting tabIndex should always set the attribute to -1', function(done) {
-            customElement.tabIndex = 1;
-            runAsync(() => expect(customElement.getAttribute('tabindex')).to.be.equal('-1'), done);
-          });
-
-          it('in shady dom setting tabIndex should forward it to the internal element', function(done) {
-            customElement.tabIndex = 1;
-            runAsync(() => expect(focusElement.getAttribute('tabindex')).to.be.equal('1'), done);
-          });
-
-          it('in shady dom setting disabled to false should restore tabIndex to -1', function(done) {
-            customElement.disabled = true;
-            customElement.tabIndex = 1;
-            customElement.disabled = false;
-            runAsync(() => expect(customElement.getAttribute('tabindex')).to.be.equal('-1'), done);
-          });
-
-          it('in shady dom tabindex should be set to the internal element', function(done) {
-            customElement.tabIndex = 1;
-            runAsync(() => expect(focusElement.getAttribute('tabindex')).to.be.equal('1'), done);
-          });
-        }
       });
 
       describe('focus', function() {
-        it('should focus the internal input on focus', function() {
+
+        beforeEach(function() {
           // Avoid FF window focus issues by stubing native focus behavior
-          window.sinon.stub(focusElement, 'focus', e => {
-            focusElement.dispatchEvent(new CustomEvent('focus', {bubbles: true}));
-          });
-
-          customElement._focus();
-          expect(customElement.focused).to.be.true;
-        });
-
-        it('should blur the internal input on blur', function() {
           window.sinon.stub(focusElement, 'focus', e => {
             focusElement.dispatchEvent(new CustomEvent('focus', {bubbles: true}));
           });
           window.sinon.stub(customElement.$.input, 'blur', e => {
             focusElement.dispatchEvent(new CustomEvent('blur', {bubbles: true}));
           });
+        });
 
-          customElement._focus();
+        it('should focus the internal input on focus', function() {
+          customElement.focus();
+          expect(customElement.focused).to.be.true;
+        });
+
+        it('should blur the internal input on blur', function() {
+          customElement.focus();
           customElement.blur();
           expect(customElement.focused).to.be.false;
         });
