Implementing label. Fixes: #5

--- a/test/visual/theming-md.html
+++ b/test/visual/theming-md.html
@@ -46,6 +46,10 @@
       input with placeholder: <vaadin-input placeholder="Run Vaadin"></vaadin-input>
       <p>
       invalid input: <vaadin-input required invalid></vaadin-input>
+      <p>
+      input with label: <vaadin-input label="Foo"></vaadin-input>
+      <p>
+      input with label and Value: <vaadin-input label="Foo" value="Bar"></vaadin-input>
     </fieldset>
   </form>
 
