--- a/test/visual/default.html
+++ b/test/visual/default.html
@@ -16,7 +16,7 @@
         font-family: sans-serif;
         font-size: 16px;
         width: 550px;
-        border: solid 1px grey;        
+        border: solid 1px grey;
       }
 
       #hidden-caret {
@@ -42,7 +42,9 @@
       <p>
       input with placeholder: <vaadin-input placeholder="Run Vaadin"></vaadin-input>
       <p>
-      invalid input: <vaadin-input value minlength="4"></vaadin-input>
+      input with label: <vaadin-input label="Foo"></vaadin-input>
+      <p>
+      input with label and Value: <vaadin-input label="Foo" value="Bar"></vaadin-input>
     </fieldset>
   </form>
 
