--- a/test/visual/theming-md.html
+++ b/test/visual/theming-md.html
@@ -35,21 +35,14 @@
 
   <form>
     <fieldset id="theming-md-tests">
-      default input: <vaadin-input></vaadin-input>
-      <p>
-      input with value: <vaadin-input value="Go Vaadin"></vaadin-input>
-      <p>
-      focused input: <vaadin-input autofocus id="hidden-caret"></vaadin-input>
-      <p>
-      disabled input: <vaadin-input value="disabled" disabled></vaadin-input>
-      <p>
-      input with placeholder: <vaadin-input placeholder="Run Vaadin"></vaadin-input>
-      <p>
-      invalid input: <vaadin-input required invalid></vaadin-input>
-      <p>
-      input with label: <vaadin-input label="Foo"></vaadin-input>
-      <p>
-      input with label and Value: <vaadin-input label="Foo" value="Bar"></vaadin-input>
+      <vaadin-input label="default input"></vaadin-input>
+      <vaadin-input label="input with value" value="Go Vaadin"></vaadin-input>
+      <vaadin-input label="focused input" autofocus id="hidden-caret"></vaadin-input>
+      <vaadin-input label="disabled input" value="disabled" disabled></vaadin-input>
+      <vaadin-input placeholder="input with placeholder"></vaadin-input>
+      <vaadin-input label="invalid input" required invalid></vaadin-input>
+      <vaadin-input label="input with label"></vaadin-input>
+      <vaadin-input label="input with label and Value" value="Bar"></vaadin-input>
     </fieldset>
   </form>
 
