--- a/vaadin-input.html
+++ b/vaadin-input.html
@@ -34,18 +34,16 @@ Custom property | Description | Default
   <template>
     <style>
       :host {
-        display: inline-block;
+        display: inline-flex;
+        flex-direction: column;
+        -webkit-tap-highlight-color: transparent;
       }
 
       input {
-        display: block;
-        width: 100%;
-        box-sizing: border-box;
         @apply --vaadin-input__input;
       }
 
       label {
-        display: block;
         @apply --vaadin-input__label;
       }
 
@@ -60,13 +58,13 @@ Custom property | Description | Default
       input::placeholder {
         @apply --vaadin-input__input-placeholder;
       }
+
+      input::-ms-clear {
+        display: none;
+      }
     </style>
 
-    <dom-if if="[[label]]">
-      <template>
-        <label id="label" on-click="focus">[[label]]</label>
-      </template>
-    </dom-if>
+    <label id="label" on-click="focus">[[label]]</label>
 
     <input id="input"
       autocomplete$="[[autocomplete]]"
@@ -86,7 +84,7 @@ Custom property | Description | Default
       title="[[title]]"
       on-focus="_onInputFocus"
       on-blur="_onInputBlur"
-    />
+    >
   </template>
 
   <script>
@@ -245,8 +243,7 @@ Custom property | Description | Default
               type: Boolean,
               notify: true,
               readOnly: true,
-              reflectToAttribute: true,
-              observer: '_focusedChanged'
+              reflectToAttribute: true
             }
           }
         };
@@ -299,11 +296,13 @@ Custom property | Description | Default
         return this.$.input.checkValidity();
       }
 
-      _focusedChanged() {
-        // Needed for Edge, until they have support for CSS Custom Properties
-        // (already shipping in Edge Preview)
+      // Needed for Edge, until they have support for CSS Custom Properties
+      // (already shipping in Edge Preview)
+      attributeChangedCallback(prop, oldVal, newVal) {
+        super.attributeChangedCallback(prop, oldVal, newVal);
         this.updateStyles();
       }
+
     }
 
     customElements.define(VaadinInput.is, VaadinInput);
