--- a/vaadin-input.html
+++ b/vaadin-input.html
@@ -7,8 +7,6 @@ This program is available under Apache License Version 2.0, available at https:/
 <!--
 `<vaadin-input>` is a Polymer element for input control in forms.
 
-It wraps an `<input>` and a `<label>` native elements easy to customize.
-
 ```html
 <vaadin-input>
 </vaadin-input>
@@ -112,7 +110,7 @@ Custom property | Description | Default
             },
 
             /**
-             * String used for the label element. If empty the element is removed from the dom.
+             * String used for the label element.
              */
             label: {
               type: String
